--- a/esquadriasstyle.css
+++ b/esquadriasstyle.css
@@ -1,129 +1,361 @@
-* { 
-box-sizing: border-box; 
-font-family: sans-serif;
-padding: 0px;
-margin: 0px;
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    font-family: sans-serif;
 }
 
-html, body { width: 100%;}
 
+/* ---------------- */
 .desktopOnly{
     display:none;
 }
+/* ---------------- */
 
-.topHeader, .topHeader a, .topHeader p{
-    background-color: rgb(12, 12, 51);
-    color: white;
-    text-decoration: none;
-    font-style: italic;
-    font-size: 0.5rem;
-    display:flex;
-    justify-content:flex-start;
-    transition: ease 0.2s;
+/* Header Principal  */
+.header2 img{
+    max-width: 100%;
+    max-height: 100%;
 }
 
-.SeccondHeader{
+.header2{
+    height: 14vh;
+    background-color: rgb(230, 230, 230);
+
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 1em;
-    background: #fff;
-    flex-wrap: wrap;
-    position: sticky;
-    z-index: 1000;
-    top: 0;
-    box-shadow: 0 2px 10px rgba(0,0,0,.06);
+    justify-content: space-around;
 }
 
-.SeccondHeader a{
-    color: rgb(15, 15, 80) ;
-    text-decoration: underline;
-    text-underline-offset: 20%;
+.header2 nav{
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
 }
 
-.logo01{
-    max-width: 80px;
+.header2 a{
+    color: #5f5f5f;
+    transition: 0.5s ease;
 }
+/* Fim Header Principal */
 
+/* Nossa história */
 .nossaHistoria{
-    display:grid;
-    grid-template-columns: 1fr;
-    min-height: 40vh;
-    grid-column: 1/-1;
-    padding: 1em;
-    text-align: justify;
-    line-height: 1.25em;
-
-    background-color: rgb(12, 12, 46);
+    height: auto;
+    min-height: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
+    text-align: center;
+    row-gap: 2vh;
+    background-color: #012547;
     color: white;
-}
-
-.fachadaimg{
-    display:none;
+    padding-bottom: 2vh;
 }
 
 .nossaHistoria h1{
-    text-align: center;
-    padding: 1em;
+    font-size: 1.5rem;
+    grid-column: 2;
 }
 
-.servicosWhole{
+.nossaHistoria .fachadaimg{
+    max-height: 50vh;
+    grid-column: 2;
+    justify-self: center;
+    align-self: center;
+}
+
+.nossaHistoria .nossaHistoria__texto{
+    grid-column: 2;
+}
+/* Fim de nossa história (poético) */
+
+/* Inicio dos serviços */
+.servicos{
+    background-color: #d3d3d3;
+    grid-template-columns: 1fr 8fr 1fr;
+}
+.servicos .sectionTitle{
+    padding-bottom: 2vh;
+}
+.servicos{
+    padding-top: 2vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    line-height: 1.5rem;
+    text-align: center;
+}
+
+.servicos .servicoCard{
     display: grid;
-    grid-template-columns: 1fr;
-    text-align: center;
-    padding: 0.6em;
+    grid-template-columns: 1fr 6fr 1fr;
+    gap: 1vh;
 }
 
-.servicosWhole img{
-    max-width: 300px;
+.servicos img {
     border-radius: 8px;
+
+    max-height: 90%;
+    max-width: 40vw;
+
+    grid-column: 2;
+
+    align-self: center;
+    justify-self: center;
 }
 
-.servicosWhole p{
-    padding: 1rem;
+.servicos h2{
+    grid-column: 2;
 }
 
-.depoimentos{
-    display:grid;
+.servicos p{
+    grid-column: 2;
+}
+/* FIM DOS SERVICOS
+
+INICIO DOS DEPOIMENTOS */
+.depoimentoUsuario{
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-columns: 1fr 2fr 6fr 1fr;
 }
 
-@media (min-width:1024px){
-    .desktopOnly{display:block}
-    .desktopOnly a:hover{
-        color: rgb(140, 209, 250);
-        transition: ease 0.2s;
-        font-size: bold;
-        font-size:0.52rem;}
-
-    .nossaHistoria{
-        display:grid;
-        grid-template-columns: 1fr 3fr 3fr 3fr 3fr 1fr;
-        grid-template-rows: 100px 500px
-    } 
-
-    .nossaHistoria h1{
-        grid-column: 3/6;
-
-        text-align: justify;
-    }
-
-    .nossaHistoria p{
-        grid-column:3/6;
-    }
-
-    .servicosWhole{
-        grid-template-columns: 2fr 3fr 3fr 3fr 2fr;
-        grid-template-rows: 100px 500px;
-    }
-
-    .psm{grid-column: 2;}
-    .ime{grid-column:3;}
-    .cda{grid-column:4;}
-    .servicosTitle{
-        grid-column:3;
-        text-align: center;
-    }
-
+.sectionTitle{
+    font-size: 1.5rem;
+    text-align: center;
+    padding-bottom: 2vh;
+    padding-top: 2vh;
 }
 
-        
+.depoimentoUsuario h3{
+    grid-column: 3;
+}
+
+.depoimentoUsuario p{
+    grid-column: 3/4;    
+}
+
+.depoimentoUsuario img{
+    border-radius:50%;
+    max-height: 90%;
+    max-width: 10vh;
+
+    grid-column: 2;
+    grid-row: 1/3;
+
+    align-self: center;
+    justify-self: center;
+}
+
+
+/* 
+FIM DOS DEPOIMENTOS
+
+INICIO DO FORMULARIO */
+
+.container{
+    display: grid;
+    gap: 1vh;
+    grid-template-columns: 1fr 2fr 2fr 2fr 2fr 1fr;
+    grid-template-rows: 1.5rem 1.5rem 2fr;
+}
+
+.formulario .formNameLabel{
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.formulario .inputNome{
+    grid-column: 3/6;
+    grid-row: 1;
+}
+
+.formulario .formEmailLabel{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.formulario .inputEmail{
+    grid-column: 3/6;
+    grid-row:2;
+}
+
+.formulario .formMessageLabel{
+    grid-column:2;
+    grid-row:3;
+}
+
+.formulario .textarea{
+    grid-column: 3/6;
+    grid-row:3
+}
+
+textarea{
+    resize: none;
+    border-radius: 4px;
+    border-color:#0164BE;
+}
+
+input{
+    border-radius: 4px;
+    border-color:#0164BE;
+}
+
+footer{
+    height: 40vh;
+
+    background-color: #5f5f5f;
+    color: white;
+}
+
+.formulario{
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
+/* //////////////////////////////////////////////////////////////////////////////// */
+@media (min-width: 1024px) {
+
+ /* Informações de cima */
+  .desktopOnly { 
+    display: flex;
+    height: 1vw;
+    text-align: center;
+ }
+
+ .topHeader{
+    width: 100%;
+    display: flex;
+    background-color: rgb(8, 8, 77);
+    color: whitesmoke;
+    justify-content: center;
+    gap: 2vw;
+
+    font-size: 0.65rem;
+ }
+
+ .topHeader nav{
+    display: flex;
+    gap: 2vw;
+    text-decoration: none;
+ }
+
+ .topHeader a{
+    color: whitesmoke;
+    transition: ease 0.5s;
+ }
+
+ .topHeader a:hover{
+    transition: ease 0.5s;
+    color: rgb(121, 166, 226);
+    font-size: 0.66rem;
+ }
+/*  Fim das informações de cima */
+
+/* Header principal */
+.header2 nav{
+    display: flex;
+    flex-direction: row;
+    gap: 2vw;
+}
+
+.header2 a:hover{
+    transition: 0.5s ease;
+    color: #0164BE;
+}
+/* Fim header Principal */
+
+/* Nossa história */
+.nossaHistoria{
+    height: auto;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 4fr 4fr 4fr 4fr 1fr;
+    grid-template-rows: 10% 10% 10% 10% 50% 10%;
+    text-align: center;
+    row-gap: 1vh;
+    column-gap: 1vw;
+}
+
+.nossaHistoria h1{
+    font-size: 1.5rem;
+    grid-column-start: 4;
+    grid-row: 2;
+    align-self:center;
+}
+
+.nossaHistoria .fachadaimg{
+    max-height: 80vh;
+    grid-column: 2;
+    grid-column-end: 3;
+    grid-row: 1/-1;
+    justify-self: center;
+    align-self: center;
+    border-radius:8px;
+}
+
+.nossaHistoria .nossaHistoria__texto{
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 3;
+    grid-row-end: 6;
+    justify-self: center;
+    align-self:center;
+}
+/* FIM DA HISTORIA */
+
+/* INICIO DOS SERVICOS */
+.servicos{
+    height: 120vh;
+}
+.servicos .servicoCard, .servicoCard2{
+    display: grid;
+    grid-template-columns: 1fr 4fr 4fr 4fr 4fr 1fr;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+
+    max-height: 35vh;
+
+    line-height: 2em;
+}
+
+.servicos .servicoCard img{
+    max-height: 95%;
+    max-width: 30vw;
+
+    grid-column: 2/4;
+    grid-row:1/5;
+}
+
+.servicos .servicoCard h2{
+    grid-column: 4/6;
+    grid-row:1;
+
+    align-self: center;
+}
+
+.servicos .servicoCard p{
+    grid-column: 4/6;
+    grid-row:2/4;
+}
+
+.servicos .servicoCard2 img{
+    max-height: 95%;
+    max-width: 30vw;
+
+    grid-column: 5/6;
+    grid-row:1/5;
+}
+
+.servicos .servicoCard2 h2{
+    grid-column: 2/4;
+    grid-row:1/2;
+
+    align-self: center;
+}
+
+.servicos .servicoCard2 p{
+    grid-column: 2/4;
+    grid-row:2/4;
+}
+
